<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateActiviy">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:layout_marginBottom="15dp"
        android:inputType="numberDecimal"
        android:hint="input the money"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/showout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Hello"

        android:layout_marginBottom="30dp"
        android:textSize="40dp"/>


    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_dollar"
        android:onClick="onClick"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_euro"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_won"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_won"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="openOne"
        android:text="@string/btn_config" />

</LinearLayout>