<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FrameActivity" >

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.example.dell.anew.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <fragment
        android:id="@+id/fragment_func"
        android:name="com.example.dell.anew.FuncActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.example.dell.anew.SettingActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="0.5"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"

            style="@style/rg_btn_style"
            android:drawableTop="@drawable/home"
            android:text="@string/rdo_home_label" />

        <RadioButton
            android:id="@+id/radioFunc"
            android:drawableTop="@drawable/func"
            style="@style/rg_btn_style"
            android:text="@string/rdo_func_label" />

        <RadioButton
            android:id="@+id/radioSetting"
            style="@style/rg_btn_style"
            android:drawableTop="@drawable/setting"
            android:text="@string/rdo_setting_label" />

    </RadioGroup>
</LinearLayout>